# cmake

./: CMakeLists.txt  first.cpp  hello.hpp  myprogram.cpp  newprogram.cpp  second.cpp
